<resources>
    <string name="app_name">PRM391x_QuizApp_hidayatmhyFX07085</string>
    <string name="mynamehehe">M. Hilal Yahya Hidayat</string>
    <string name="question_1">1. What is Deoxyribonucleic acid commonly referred to as?</string>
    <string name="answer_1_a">RNA</string>
    <string name="answer_1_b">CIA</string>
    <string name="answer_1_c">DNA</string>

    <string name="question_2">2. What processes involves treating rubber with sulfur to harden it?</string>

    <string name="question_3">3. Name two different organelles of a eukaryotic cell.</string>
    <string name="answer_3_a">Ribosomes</string>
    <string name="answer_3_b">Plasmids</string>
    <string name="answer_3_c">Golgi apparatus</string>
    <string name="answer_3_d">Diploid</string>

    <string name="question_4">4. This word describes the force that pulls objects to the middle of the earth?</string>

    <string name="question_5">5. What types of trees that yield the resin used to produce turpentine?</string>
    <string name="answer_5_a">Palm trees</string>
    <string name="answer_5_b">Pine trees</string>
    <string name="answer_5_c">Oak trees</string>

    <string name="question_6">6. Cummulus and Cirrus are types of what?</string>

    <string name="question_7">7. Which two planets have one or more moon?</string>
    <string name="answer_7_a">Ceres</string>
    <string name="answer_7_b">Mercury</string>
    <string name="answer_7_c">Earth</string>
    <string name="answer_7_d">Pluto</string>

    <string name="question_8">8. Where in the human body would you find the scaphoid bone</string>

    <string name="question_9">9. Which grow upwards Stalactities or Stalagmites</string>
    <string name="answer_9_a">Stalactites</string>
    <string name="answer_9_b">Stalagmites</string>

    <string name="question_10">10. What process involves heating an ore to obtain metal?</string>

    <string name="hintEditText">Enter your answer</string>

    <string name="toastResult">Good Work, You Scored %1$d out 10</string>

    <string name="submitButton">Submit Answer</string>
    <string name="title_activity_splash">splash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
