<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/mainPadding"
    tools:context=".quizMain">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">
            <TextView
                android:id="@+id/question_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/question_1"/>

            <RadioGroup
                android:id="@+id/answer_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question_1">
                <RadioButton
                    android:id="@+id/answer_1_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1_a"/>
                <RadioButton
                    android:id="@+id/answer_1_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1_b"/>
                <RadioButton
                    android:id="@+id/answer_1_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1_c"/>
            </RadioGroup>

            <TextView
                android:id="@+id/question_2"
                android:layout_marginTop="@dimen/topMargin_beetween_qna"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/answer_1"
                android:text="@string/question_2" />
            <EditText
                android:id="@+id/answer_2"
                android:layout_below="@id/question_2"
                android:layout_width="@dimen/editTextWidth"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/question_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/answer_2"
                android:layout_marginTop="@dimen/topMargin_beetween_qna"
                android:text="@string/question_3"/>
            <RelativeLayout
                android:id="@+id/answer_3"
                android:layout_below="@id/question_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/answer_3_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_3_a"/>
                <CheckBox
                    android:id="@+id/answer_3_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/answer_3_a"
                    android:text="@string/answer_3_b"/>
                <CheckBox
                    android:id="@+id/answer_3_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/answer_3_b"
                    android:text="@string/answer_3_c"/>
                <CheckBox
                    android:id="@+id/answer_3_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/answer_3_c"
                    android:text="@string/answer_3_d"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/question_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/answer_3"
                android:layout_marginTop="@dimen/topMargin_beetween_qna"
                android:text="@string/question_4"/>
            <EditText
                android:id="@+id/answer_4"
                android:layout_width="@dimen/editTextWidth"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_4"/>

            <TextView
                android:id="@+id/question_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/answer_4"
                android:layout_marginTop="@dimen/topMargin_beetween_qna"
                android:text="@string/question_5"/>
            <RadioGroup
                android:id="@+id/answer_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_5">
                <RadioButton
                    android:id="@+id/answer_5_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_5_a"/>
                <RadioButton
                    android:id="@+id/answer_5_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_5_b"/>
                <RadioButton
                    android:id="@+id/answer_5_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_5_c"/>
            </RadioGroup>

            <TextView
                android:id="@+id/question_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topMargin_beetween_qna"
                android:layout_below="@id/answer_5"
                android:text="@string/question_6"/>
            <EditText
                android:id="@+id/answer_6"
                android:layout_width="@dimen/editTextWidth"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_6"/>

            <TextView
                android:id="@+id/question_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/answer_6"
                android:layout_marginTop="@dimen/topMargin_beetween_qna"
                android:text="@string/question_7"/>
            <RelativeLayout
                android:id="@+id/answer_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_7">
                <CheckBox
                    android:id="@+id/answer_7_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_7_a"/>
                <CheckBox
                    android:id="@+id/answer_7_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/answer_7_a"
                    android:text="@string/answer_7_b"/>
                <CheckBox
                    android:id="@+id/answer_7_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/answer_7_b"
                    android:text="@string/answer_7_c"/>
                <CheckBox
                    android:id="@+id/answer_7_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/answer_7_c"
                    android:text="@string/answer_7_d"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/question_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/answer_7"
                android:layout_marginTop="@dimen/topMargin_beetween_qna"
                android:text="@string/question_8"/>
            <EditText
                android:id="@+id/answer_8"
                android:layout_width="@dimen/editTextWidth"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_8"/>

            <TextView
                android:id="@+id/question_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/answer_8"
                android:layout_marginTop="@dimen/topMargin_beetween_qna"
                android:text="@string/question_9"/>
            <RadioGroup
                android:id="@+id/answer_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_9">
                <RadioButton
                    android:id="@+id/answer_9_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_9_a"/>
                <RadioButton
                    android:id="@+id/answer_9_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_9_b"/>
            </RadioGroup>

            <TextView
                android:id="@+id/question_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/answer_9"
                android:layout_marginTop="@dimen/topMargin_beetween_qna"
                android:text="@string/question_10"/>
            <EditText
                android:id="@+id/answer_10"
                android:layout_width="@dimen/editTextWidth"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_10"/>


        </RelativeLayout>
    </ScrollView>




</LinearLayout>